GPIB-488/Language Interfaces/C#/Backup/Gpib488.cs

//
// Gpib488.cs - GPIB-488 C# Language Interface
//
// Copyright Quality Instrumentation Solutions, Inc. and its licensors, (c) 2007
// All Rights Reserved.
// 

using System;
using System.Text;
using System.Runtime.InteropServices;

namespace QISI
{
	public class Gpib488Consts
	{
		// GPIB Status
		public const int ERR  = 1 << 15; // Error detected
		public const int TIMO = 1 << 14; // Timeout
		public const int END  = 1 << 13; // EOI or EOS detected
		public const int SRQI = 1 << 12; // SRQ detected by CIC
		public const int RQS  = 1 << 11; // Device needs service
		public const int CMPL = 1 << 8;  // I/O completed
		public const int LOK  = 1 << 7;  // Local lockout state
		public const int REM  = 1 << 6;  // Remote state
		public const int CIC  = 1 << 5;  // Controller-in-Charge
		public const int ATN  = 1 << 4;  // Attention asserted
		public const int TACS = 1 << 3;  // Talker active
		public const int LACS = 1 << 2;  // Listener active
		public const int DTAS = 1 << 1;  // Device trigger state
		public const int DCAS = 1 << 0;  // Device clear state

		// GPIB Errors
		public const int EDVR = 0;  // System error
		public const int ECIC = 1;  // Function requires GPIB board to be CIC
		public const int ENOL = 2;  // Write function detected no Listeners
		public const int EADR = 3;  // Interface board not addressed correctly
		public const int EARG = 4;  // Invalid argument to function call
		public const int ESAC = 5;  // Function requires GPIB board to be SAC
		public const int EABO = 6;  // I/O operation aborted
		public const int ENEB = 7;  // Non-existent interface board
		public const int EDMA = 8;  // Error performing DMA
		public const int EOIP = 10; // I/O operation started before previous operation completed
		public const int ECAP = 11; // No capability for intended operation
		public const int EFSO = 12; // File system operation error
		public const int EBUS = 14; // Command error during device call
		public const int ESTB = 15; // Serial poll status byte lost
		public const int ESRQ = 16; // SRQ remains asserted
		public const int ETAB = 20; // The return buffer is full
		public const int ELCK = 21; // Address or board is locked
		public const int EARM = 22; // The ibnotify Callback failed to rearm
		public const int EHDL = 23; // The input handle is invalid
		public const int EWIP = 26; // Wait already in progress on input ud
		public const int ERST = 27; // The event notification was cancelled due to a reset of the interface

		// Timeout values
		public const int TNONE  = 0;  // Infinite timeout (disabled)
		public const int T10us  = 1;  // Timeout of 10 us (ideal)
		public const int T30us  = 2;  // Timeout of 30 us (ideal)
		public const int T100us = 3;  // Timeout of 100 us (ideal)
		public const int T300us = 4;  // Timeout of 300 us (ideal)
		public const int T1ms   = 5;  // Timeout of 1 ms (ideal)
		public const int T3ms   = 6;  // Timeout of 3 ms (ideal)
		public const int T10ms  = 7;  // Timeout of 10 ms (ideal)
		public const int T30ms  = 8;  // Timeout of 30 ms (ideal)
		public const int T100ms = 9;  // Timeout of 100 ms (ideal)
		public const int T300ms = 10; // Timeout of 300 ms (ideal)
		public const int T1s    = 11; // Timeout of 1 s (ideal)
		public const int T3s    = 12; // Timeout of 3 s (ideal)
		public const int T10s   = 13; // Timeout of 10 s (ideal)
		public const int T30s   = 14; // Timeout of 30 s (ideal)
		public const int T100s  = 15; // Timeout of 100 s (ideal)
		public const int T300s  = 16; // Timeout of 300 s (ideal)
		public const int T1000s = 17; // Timeout of 1000 s (ideal)

		// ibln() constants
		public const int NO_SAD  = 0;
		public const int ALL_SAD = -1;

		// ibconfig() options
		public const int IbcPAD            = 0x0001; // Primary Address
		public const int IbcSAD            = 0x0002; // Secondary Address
		public const int IbcTMO            = 0x0003; // Timeout Value
		public const int IbcEOT            = 0x0004; // Send EOI with last data byte?
		public const int IbcPPC            = 0x0005; // Parallel Poll Configure
		public const int IbcREADDR         = 0x0006; // Repeat Addressing
		public const int IbcAUTOPOLL       = 0x0007; // Disable Auto Serial Polling
		public const int IbcCICPROT        = 0x0008; // Use the CIC Protocol?
		public const int IbcIRQ            = 0x0009; // Use PIO for I/O
		public const int IbcSC             = 0x000A; // Board is System Controller?
		public const int IbcSRE            = 0x000B; // Assert SRE on device calls?
		public const int IbcEOSrd          = 0x000C; // Terminate reads on EOS
		public const int IbcEOSwrt         = 0x000D; // Send EOI with EOS character
		public const int IbcEOScmp         = 0x000E; // Use 7 or 8-bit EOS compare
		public const int IbcEOSchar        = 0x000F; // The EOS character
		public const int IbcPP2            = 0x0010; // Use Parallel Poll Mode 2
		public const int IbcTIMING         = 0x0011; // NORMAL, HIGH, or VERY_HIGH timing
		public const int IbcDMA            = 0x0012; // Use DMA for I/O
		public const int IbcReadAdjust     = 0x0013; // Swap bytes during an ibrd
		public const int IbcWriteAdjust    = 0x0014; // Swap bytes during an ibwrt
		public const int IbcSendLLO        = 0x0017; // Enable/disable the sending of LLO
		public const int IbcSPollTime      = 0x0018; // Set the timeout value for serial polls
		public const int IbcPPollTime      = 0x0019; // Set the parallel poll length period
		public const int IbcEndBitIsNormal = 0x001A; // Remove EOS from END bit of IBSTA
		public const int IbcUnAddr         = 0x001B; // Enable/disable device unaddressing
		public const int IbcBlockIfLocked  = 0x001D; // Enable/disable blocking for locked boards/devices
		public const int IbcHSCableLength  = 0x001F; // Length of cable specified for high speed timing
		public const int IbcIst            = 0x0020; // Set the IST bit
		public const int IbcRsv            = 0x0021; // Set the RSV byte
		public const int IbcLON            = 0x0022; // Enter listen only mode

		// ibask() options
		public const int IbaPAD            = 0x0001; // Primary Address
		public const int IbaSAD            = 0x0002; // Secondary Address
		public const int IbaTMO            = 0x0003; // Timeout Value
		public const int IbaEOT            = 0x0004; // Send EOI with last data byte?
		public const int IbaPPC            = 0x0005; // Parallel Poll Configure
		public const int IbaREADDR         = 0x0006; // Repeat Addressing
		public const int IbaAUTOPOLL       = 0x0007; // Disable Auto Serial Polling
		public const int IbaCICPROT        = 0x0008; // Use the CIC Protocol?
		public const int IbaIRQ            = 0x0009; // Use PIO for I/O
		public const int IbaSC             = 0x000A; // Board is System Controller?
		public const int IbaSRE            = 0x000B; // Assert SRE on device calls?
		public const int IbaEOSrd          = 0x000C; // Terminate reads on EOS
		public const int IbaEOSwrt         = 0x000D; // Send EOI with EOS character
		public const int IbaEOScmp         = 0x000E; // Use 7 or 8-bit EOS compare
		public const int IbaEOSchar        = 0x000F; // The EOS character
		public const int IbaPP2            = 0x0010; // Use Parallel Poll Mode 2
		public const int IbaTIMING         = 0x0011; // NORMAL, HIGH, or VERY_HIGH timing
		public const int IbaDMA            = 0x0012; // Use DMA for I/O
		public const int IbaReadAdjust     = 0x0013; // Swap bytes during an ibrd
		public const int IbaWriteAdjust    = 0x0014; // Swap bytes during an ibwrt
		public const int IbaSendLLO        = 0x0017; // Enable/disable the sending of LLO
		public const int IbaSPollTime      = 0x0018; // Set the timeout value for serial polls
		public const int IbaPPollTime      = 0x0019; // Set the parallel poll length period
		public const int IbaEndBitIsNormal = 0x001A; // Remove EOS from END bit of IBSTA
		public const int IbaUnAddr         = 0x001B; // Enable/disable device unaddressing
		public const int IbaBlockIfLocked  = 0x001D; // Enable/disable blocking for locked boards/devices
		public const int IbaHSCableLength  = 0x001F; // Length of cable specified for high speed timing
		public const int IbaIst            = 0x0020; // Set the IST bit
		public const int IbaRsv            = 0x0021; // Set the RSV byte
		public const int IbaLON            = 0x0022; // Enter listen only mode
		public const int IbaBNA            = 0x0200; // A device's access board

		// Send() 488.2 constants
		public const int NULLend = 0x00; // Do nothing at the end of a transfer
		public const int NLend   = 0x01; // Send NL with EOI after a transfer
		public const int DABend  = 0x02; // Send EOI with the last DAB

		// Receive() 488.2 constants
		public const int STOPend = 0x0100;

		// Address List terminator
		public const short NOADDR = unchecked((short)0xFFFF);
		
		// Addressing Utility functions
		public static short MakeAddr(byte pad, byte sad)
		{
			return ((short)(((pad)&0xFF) | ((sad)<<8)));
		}

		public static byte GetPAD(short val)
		{
			return (byte)((val) & 0xFF); 
		}

		public static byte GetSAD(short val)
		{
			return (byte)(((val) >> 8) & 0xFF);
		}
	}

	/// <summary>
	/// Summary description for Gpib488.
	/// </summary>
	public class Gpib488
	{
		private const string _GpibDll = "gpib488.dll";

		[DllImport(_GpibDll, EntryPoint="ibask")]
		private static extern int _ibask(int ud, int option, out int v);
		public static int ibask(int ud, int option, out int v)
		{
			return _ibask(ud, option, out v);
		}

		[DllImport(_GpibDll, EntryPoint="ibcac")]
		private static extern int _ibcac(int ud, int v);
		public static int ibcac(int ud, int v)
		{
			return _ibcac(ud, v);
		}

		[DllImport(_GpibDll, EntryPoint="ibclr")]
		private static extern int _ibclr(int ud);
		public static int ibclr(int ud)
		{
			return _ibclr(ud);
		}

		[DllImport(_GpibDll, EntryPoint="ibcmd")]
		private static extern int _ibcmd(int ud, byte[] buffer, IntPtr count);
		public static int ibcmd(int ud, byte[] buffer, int count)
		{
			return _ibcmd(ud, buffer, (IntPtr)count);
		}

		[DllImport(_GpibDll, EntryPoint="ibcmd")]
		private static extern int _ibcmd(int ud, string buffer, IntPtr count);
		public static int ibcmd(int ud, string buffer, int count)
		{
			return _ibcmd(ud, buffer, (IntPtr)count);
		}

		[DllImport(_GpibDll, EntryPoint="ibconfig")]
		private static extern int _ibconfig(int ud, int option, int v);
		public static int ibconfig(int ud, int option, int v)
		{
			return _ibconfig(ud, option, v);
		}

		[DllImport(_GpibDll, EntryPoint="ibdev")]
		private static extern int _ibdev(int board, int pad, int sad, int tmo, int eot, int eos);
		public static int ibdev(int board, int pad, int sad, int tmo, int eot, int eos)
		{
			return _ibdev(board, pad, sad, tmo, eot, eos);
		}

		[DllImport(_GpibDll, EntryPoint="ibfind")]
		private static extern int _ibfind(string name);
		public static int ibfind(string name)
		{
			return _ibfind(name);
		}

		[DllImport(_GpibDll, EntryPoint="ibgts")]
		private static extern int _ibgts(int ud, int v);
		public static int ibgts(int ud, int v)
		{
			return _ibgts(ud, v);
		}

		[DllImport(_GpibDll, EntryPoint="iblines")]
		private static extern int _iblines(int ud, out short result);
		public static int iblines(int ud, out short result)
		{
			return _iblines(ud, out result);
		}

		[DllImport(_GpibDll, EntryPoint="ibln")]
		private static extern int _ibln(int ud, int pad, int sad, out short listen);
		public static int ibln(int ud, int pad, int sad, out short listen)
		{
			return _ibln(ud, pad, sad, out listen);
		}

		[DllImport(_GpibDll, EntryPoint="ibloc")]
		private static extern int _ibloc(int ud);
		public static int ibloc(int ud)
		{
			return _ibloc(ud);
		}

		[DllImport(_GpibDll, EntryPoint="ibonl")]
		private static extern int _ibonl(int ud, int v);
		public static int ibonl(int ud, int v)
		{
			return _ibonl(ud, v);
		}
